# ops-copilot-agent

./: .dockerignore  .gitignore  Makefile  README.md  package.json
.github/workflows/: ecr-build-push.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/opscopilot_api/: db.py  logging.py  main.py  telemetry.py
apps/api/src/opscopilot_api/routers/: api_router.py  health_router.py  messages_router.py  runs_router.py  sessions_router.py  tool_calls_router.py
apps/api/src/opscopilot_api/schemas/: chat.py  messages.py  runs.py  sessions.py  tool_calls.py
apps/api/src/opscopilot_api/services/: chat_service.py  event_mapper.py  message_service.py  readiness_service.py  run_service.py  runtime_factory.py  session_service.py  sse.py  stream_decisions.py  tool_call_service.py
apps/api/tests/integration/: conftest.py  test_api_integration.py  test_chat_stream_real_prompt.py
apps/api/tests/unit/: conftest.py  test_api_router.py  test_chat_endpoint.py  test_chat_service_prompt_history.py  test_chat_stream_endpoint.py  test_event_mapper.py  test_health_router.py  test_messages_runs_endpoints.py  test_sessions_router.py  test_smoke.py
apps/tool-server/: Dockerfile  go.mod  go.sum
scripts/: create-kind.sh  delete-kind.sh  eks-kubeconfig.sh  load-env.sh  new-test-run-dir.sh  publish-python-packages.sh  push-ecr-images.sh  render-controller-values.sh  render-kind-kubeconfig.sh  run-agent-integration.sh  run-integration.sh  run-local-down.sh  run-local-helm-down.sh  run-local-helm.sh  run-local.sh  run-test-logged.sh  seed-kind-workloads.sh  smoke-local.sh  terraform.sh
(+148 files in other folders)
