[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-copilot"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["pytest>=7"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
